# CppChess

./: CMakeLists.txt
external_UI_framework/include/wx/: dialog.h
external_UI_framework/include/wx/msw/: frame.h
external_UI_framework/lib/mswu/: build.cfg
images/: tree.txt
src/: main.cpp
src/controller/: Controller.cpp  Controller.h
src/model/: Bishop.cpp  Bishop.h  GameModel.cpp  GameModel.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Player.cpp  Player.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
src/view/: View.cpp  View.h
